[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normalverteilungs-analyse"
version = "1.0.0"
description = "Ein Projekt zur Demonstration und Analyse von Normalverteilungen (Gaußsche Verteilung) mit umfassender Lizenz-Dokumentation"
readme = "README.md"
authors = [
    {name = "Amin"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["normalverteilung", "gauss", "statistik", "analyse", "visualisierung"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Repository = "https://github.com/yourusername/normalverteilungs-analyse"
Documentation = "https://github.com/yourusername/normalverteilungs-analyse/blob/main/README.md"

[tool.setuptools]
packages = [""]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
